--- a/README.asciidoc
+++ b/README.asciidoc
@@ -14,13 +14,13 @@ Currently it consists of:
  - Providers (`layer/tile`):
    * Google - using Google Maps API v3;
    * Yandex - using Yandex Maps API v2;
-   * Bing - with propper attribution.
+   * Bing - with proper attribution.
 
-All theese providers are implemented with respect to terms of use.
+All these providers are implemented with respect to terms of use.
 
 Also there are some useful control plugins (`control/`):
 
- * Permalink - OpenLayers compatible permanent link with support of storing
+ * Permalink - OpenLayers compatible permanent link with support for storing
    location data in hash part (#lat=...);
  * Scale - scale ruler which looks like one on paper maps.
 
